# UnityAndroidNativePluginExample

./: .gitignore  README.MD  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/testnativeplugin/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  README.MD  native-lib.cpp
app/src/main/cpp/source/: PlatformBase.h  RenderAPI.cpp  RenderAPI_OpenGLCoreES.cpp  RenderAPI_Vulkan.cpp  RenderingPlugin.cpp
app/src/main/cpp/source/gl3w/: gl3w.c
app/src/main/java/com/example/testnativeplugin/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/testnativeplugin/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
